cluster/apps/coachi/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coachi
  labels:
    app.kubernetes.io/part-of: coachi
